--- a/assets/jade/bower_scripts.jade
+++ b/assets/jade/bower_scripts.jade
@@ -1,2 +1,4 @@
 //Include scripts from bower here.
 //bower install <package> installs to ./server/components
+
+//script(src="/components/somescript.js")
