Added some bower packages

--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -6,6 +6,6 @@ html(lang="en")
       link(rel="stylesheet", type="text/css", href="/assets/css/" + style)
   body
     include body
-    include bower_scripts
+    include bower
     each script in scripts
       script(src="/assets/js/" + script)
